--- a/Food-app/src/index.css
+++ b/Food-app/src/index.css
@@ -1,1 +1,14 @@
 @import "tailwindcss";
+/* src/styles/index.css */
+
+@layer utilities {
+    .hide-scrollbar {
+      -ms-overflow-style: none; /* Hide scrollbar for IE and Edge */
+      scrollbar-width: none; /* Hide scrollbar for Firefox */
+    }
+  
+    .hide-scrollbar::-webkit-scrollbar {
+      display: none; /* Hide scrollbar for WebKit-based browsers */
+    }
+  }
+  
